log
Wed 23 Aug 2023 04:45:29 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:7: error: expected identifier or ‘(’ before ‘->’ token
   32 |   List->head=NULL;
      |       ^~
Compilation failed
1a19333
Wed 23 Aug 2023 04:45:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘head’ [-Werror=unused-variable]
   32 |   List *head=NULL;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
45208c6
Wed 23 Aug 2023 04:50:14 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
bb201d0
Wed 23 Aug 2023 04:58:02 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:26: error: ‘data’ undeclared (first use in this function)
   41 |   return &(list->current-data);
      |                          ^~~~
list.c:41:26: note: each undeclared identifier is reported only once for each function it appears in
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d4ed7eb
